6-istio-基础演示/2-路由/1-nginx-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-test
spec:
  hosts:
  - nginx
  http:
  - match: # 规则1: 匹配特定头部
    - headers:
        test:
          regex: "true"
    route:
    - destination:
        host: nginx
        subset: appv2
  - match: # 规则2: 路径匹配
    - uri:
        prefix: "/test.html"
    route:
    - destination:
        host: nginx
        subset: appv2
  - route:  # 默认给 v1
    - destination:
        host: nginx
        subset: appv1
